[package]
name = "dupe-killer"
version = "0.1.0"
edition = "2021"
description = "A command-line duplicate file finder with progressive hashing"

[dependencies]
clap = { version = "4", features = ["derive"] }
blake3 = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
walkdir = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
